--- a/views/register.hbs
+++ b/views/register.hbs
@@ -29,12 +29,7 @@
           <form action="/auth/register" method="POST">
             <div class="form-group">
               <label for="name">Name</label>
-              <input
-                type="text"
-                class="form-control"
-                id="name"
-                name="name"
-              />
+              <input type="text" class="form-control" id="name" name="name" />
             </div>
             <div class="form-group">
               <label for="email">Email Address</label>
@@ -54,10 +49,23 @@
                 name="password"
               />
             </div>
+            <div class="form-group">
+              <label for="passwordConfirm">Confirm Password</label>
+              <input
+                type="password"
+                class="form-control"
+                id="passwordConfirm"
+                name="passwordConfirm"
+              />
+            </div>
             <button type="submit" class="btn btn-primary">Register User</button>
           </form>
         </div>
       </div>
+      {{#if message}}
+        <h4 class="alert alert-danger mt-4">{{message}}</h4>
+      {{/if}}
+
     </div>
     <script
       src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
